--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,10 @@ argparse~=1.4.0
 PyYAML~=5.3.1
 pykeepass~=4.0.1
 SecretStorage~=3.3.1
-flask~=2.0.2
+Flask~=2.0.2
+flask-restful~=0.3.9
+dependency-injector~=4.37.0
+deepmerge~=0.3.0
+# Django
+#djangorestframework~=3.12.4
+#django~=3.2.9
