more verbose docker-compose to know how to override

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,15 @@ services:
         target: /etc/kdbx-headless
         read_only: true
 volumes:
-  kdbx-headless: {}
-  kdbx: {}
+  kdbx-headless:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+#      device:
+  kdbx:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+#      device:
