--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.local/
-
 venv/
 
 *.pyc
@@ -15,4 +13,7 @@ dist/
 build/
 *.egg-info/
 
+##### local
+.local/
 docker-compose.override.yml
+##### local end
