--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,5 @@ pykeepass~=4.0.1
 SecretStorage~=3.3.1
 Flask~=2.0.2
 flask-restful~=0.3.9
-dependency-injector~=4.37.0
 deepmerge~=0.3.0
-# Django
-#djangorestframework~=3.12.4
-#django~=3.2.9
+apispec~=5.2.1
