--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ argparse~=1.4.0
 PyYAML~=5.3.1
 pykeepass~=4.0.1
 SecretStorage~=3.3.1
-Flask~=2.0.2
+Flask~=2.1.2
 flask-restful~=0.3.9
+flask-apispec~=0.11.1
 deepmerge~=0.3.0
-apispec~=5.2.1
+# apispec~=5.2.1
