--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pykeepass~=4.0.1
 SecretStorage~=3.3.1
 Flask~=2.1.2
 flask-restful~=0.3.9
-flask-apispec~=0.11.1
+# https://github.com/jmcarp/flask-apispec/issues/235
+flask-apispec==0.11.0
 deepmerge~=0.3.0
 # apispec~=5.2.1
